removed unnecessary files and fixed menu not showing in desktop after using in mobile

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ body{
 
         .fm-nav-menu {
             position: unset;
-            display: flex;  
+            display: flex !important;  
             font-size: 1.4rem;
             width: unset;
             background-color: unset;
